--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -83,6 +83,7 @@ library(ggthemes)
 library(patchwork)
 library(hrbrthemes)
 library(table1)
+library(rspiro)
 
 compute_gap_reduction <- function(df, measure) {
   df %>% 
@@ -162,7 +163,46 @@ if (ageGroup=="all_ages") {
  
 #vis_miss(nhanes_bw, warn_large_data = F)
 
-ref0 <- nhanes_bw
+ref0 <- nhanes_bw %>%
+   mutate(
+        race_spiro_gli2012            = case_match(race_text_nhanes,
+                                     "Non-Hispanic White" ~ "1"  ,
+                                     "Non-Hispanic Black" ~ "2" ,
+                                     "Non-Hispanic Asian" ~ "4", 
+                                     "Mexican American" ~ "1", 
+                                     "Other Hispanic" ~ "1",
+                                     "Other Race - Including Multi-Racial" ~ "5"
+                                     ),
+        sex_text           = case_match(sex,
+                                     "1" ~ "Male"  ,
+                                     "2" ~ "Female" ),
+        predicted_fev1_gli2012 = rspiro::pred_GLI(age=age, height=height/100, 
+                                                  gender=sex, ethnicity=race_spiro_gli2012,
+                                                  param="FEV1"),
+        predicted_fev1_gli_global = rspiro::pred_GLIgl(age=age, height=height/100, 
+                                                  gender=sex, 
+                                                  param="FEV1"),
+        perc_pred_fev1_gli2012 = rspiro::pctpred_GLI(age=age, height=height/100, 
+                                                  gender=sex, ethnicity=race_spiro_gli2012,
+                                                  FEV1=fev1),
+        zscore_fev1_gli2012 = rspiro::zscore_GLI(age=age, height=height/100, 
+                                                  gender=sex, ethnicity=race_spiro_gli2012,
+                                                  FEV1=fev1),
+        perc_pred_fev1_gli2012_whiteforall = rspiro::pctpred_GLI(age=age, height=height/100, 
+                                                  gender=sex, ethnicity=1,
+                                                  FEV1=fev1),
+        perc_pred_fev1_gli2012_otherforall = rspiro::pctpred_GLI(age=age, height=height/100, 
+                                                  gender=sex, ethnicity=5,
+                                                  FEV1=fev1),
+        perc_pred_fev1_gli_global = rspiro::pctpred_GLIgl(age=age, height=height/100, 
+                                                  gender=sex,
+                                                  FEV1=fev1),
+        zscore_fev1_gli_global = rspiro::zscore_GLIgl(age=age, height=height/100, 
+                                                  gender=sex,
+                                                  FEV1=fev1)
+      
+        ) 
+  
 
 ref0 %>%
   group_by(race) %>%
@@ -300,6 +340,9 @@ Of the 18,359 self-identified Black and White participants in NHANES 2007-2012, 
     filter(fvc_quality_pre  == "A" | fvc_quality_pre  == "B") %>%
     filter(race %in% c(3,4)) %>%
     mutate(age_group = ifelse(age>=20, "Adults", "Youth"),
+          sex_text   = case_match(sex,
+                                     "1" ~ "Male"  ,
+                                     "2" ~ "Female" ),
          smoker =  
        !((is.na(current_smoke) | (current_smoke == "3")) &
          (is.na(ever_100_smoke) | (ever_100_smoke != "1")) &
@@ -328,7 +371,7 @@ Of the 18,359 self-identified Black and White participants in NHANES 2007-2012, 
                (healthy_diet==3)))
          )
  
- table1(~ age + race_text_nhanes + sex + 
+ table1(~ age + race_text_nhanes + sex_text + 
           smoker + resp_dx + resp_symptoms + physically_active + occupational_exposure+ 
           income_poverty_ratio + home_owner + bmi + maternal_smoke +
           smoker_in_household + education_adults + now_attending_school + 
@@ -533,6 +576,9 @@ message(map_df(refs_youth, count))
 plot_racial_gap_change(refs_adult, refs_youth)
 
 ```
+
+### Reference Equations
+
 
 ### Biological Sex
 
